--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>This a new repo</p>
 <p>This is a new feature (add dropdown)</p>
 <p>This is a new feature (add button)</p>
-
+<p>This is a new feature (add image)</p>
